--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
       align-items: center;
     }
   </style>
+  
+  <p>
+    <a href="https://github.com/emi-mii/RecipesLog" target="_blank">Project Repository</a>
+  </p>
 
 </body>
 </html>
